--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
+  <div>
+    <img src="images/Pasted image.png" alt="LYDIA">
+  </div>
   <h1>welcome to moringa school</h1>
   <h3>My hobbies</h3>  
   <ul>
